[package]
name = "convey-server"
version = "0.1.0"
authors = ["Hugo Kempfer <hugkempf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
thiserror = "1.0.26"
redis = {version = "0.21.0", features = ["acl", "connection-manager", "aio", "async-std-comp"]}
actix = "0.10"
actix-web = "3.3.2"
actix-rt = "2.6.0"
actix-service = "2.0.0"
rand = "0.8.4"
base64 = "0.13.0"
lazy_static = "1.4.0"
orion = "0.16.0"
magnet-url = "2.0.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"

[dev-dependencies]
fake = "2.4.0"