[package]
name = "convey-server"
version = "0.1.0"
authors = ["Hugo Kempfer <hugkempf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
thiserror = "1.0.26"
redis = {version = "0.20.2", features = ["acl", "connection-manager", "aio", "async-std-comp"]}
actix = "0.12.0"
actix-web = "3"
orion = "0.16.0"
magnet-url = "1.2.2"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"